[gd_scene load_steps=2 format=3 uid="uid://ccio54ool64d7"]

[ext_resource type="Script" path="res://scenes/docks/query_dock/query_menu/connection_option/connection_option.gd" id="1_so24l"]

[node name="ConnectionOption" type="OptionButton"]
size_flags_horizontal = 8
script = ExtResource("1_so24l")

[connection signal="draw" from="." to="." method="_on_draw"]
[connection signal="item_selected" from="." to="." method="_on_item_selected"]
